<resources>
    <string name="app_name">AndroidAssignment</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a Button</string>
    <string name="LoginText">Login</string>
    <string name="LoginHintName">login_name</string>
    <string name="PasswordText">Password</string>
    <string name="SwitchText">What does this do?</string>
    <string name="CheckBoxText">CheckBox</string>
    <string name="RadioButtonText">RadioButton</string>
    <string name="LoginButtonText">Login</string>
    <string name="dialog_message">Do you want to finish activity?</string>
    <string name="dialog_title">Finish Activity?</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="chatButtonText">Send</string>

</resources>