<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <TextView
        android:text="@string/LoginText"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/LoginHintName"
        android:inputType="textEmailAddress"
        android:id="@+id/loginEmail"
        />
    <TextView
        android:text="@string/PasswordText"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:id="@+id/passwordEditText"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/LoginButtonText"
       />

</LinearLayout>